--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body class="bg-gray-100">
   <div id="root"></div>
-  <!-- Remova ou comente a linha abaixo -->
-  <!-- <script src="script.js"></script> -->
+    <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
